# calgary_project

./: .gitignore  Makefile  README.md  calgary_project.md  calgary_transit_routes_map.html  environment.yml  pyproject.toml
calgary_project/: eda_plot_funcs.py  other_funcs.py
calgary_project/modeling/: predict.py  train.py
notebooks/: config.py  eda_crime_stats.ipynb  eda_ridership.ipynb  eda_tpo_calls.ipynb
